--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,34 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+
 /* styles.css */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Space mono;
     max-width: 600px;
+    height: 100vh;
     margin: 0 auto;
     padding: 20px;
+    background-color: #332531;
+    
 }
+
+.titulo{
+
+    background-color: #6b4465;
+    padding: 15px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 25px
+
+};
+
+.chat-container{
+
+    position: absolute;
+    bottom: 0;
+
+};
 
 #chat-container {
     border: 1px solid #ccc;
@@ -14,11 +37,11 @@ body {
     overflow-y: auto;
     padding: 10px;
     margin-bottom: 10px;
-    background-color: #f9f9f9;
+    background-color: #864D7E;
 }
 
 .user-message {
-    background-color: #e3f2fd;
+    background-color: #864D7E;
     padding: 8px;
     border-radius: 5px;
     margin: 5px 0;
@@ -26,7 +49,7 @@ body {
 }
 
 .ai-message {
-    background-color: #f1f1f1;
+    background-color: #dfc7db;
     padding: 8px;
     border-radius: 5px;
     margin: 5px 0;
@@ -38,12 +61,13 @@ body {
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    font-family: space mono;
 }
 
 #send-button {
     width: 20%;
     padding: 8px;
-    background-color: #4CAF50;
+    background-color: #B148A1;
     color: white;
     border: none;
     border-radius: 4px;
@@ -51,5 +75,11 @@ body {
 }
 
 #send-button:hover {
-    background-color: #45a049;
+    background-color: #853679;
+}
+
+button{
+
+    font-family: space mono;
+
 }
