Última atualização (final) 27/06/2025

--- a/styles/style2.css
+++ b/styles/style2.css
@@ -1,8 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: space mono;
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
+    background-color: #332531;
+}
+
+h1{
+
+    align-items: center;
+    color: #a06a98;
+    display: flex;
+
+}
+
+img{
+
+    width: 150px;
+    height: 150px;
+    padding: 0;
+
+}
+
+.titulo{
+
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    padding-top: 25px;
+    padding-bottom: 25px;
+
+}
+
+h3{
+
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 20px 0;
 }
 
 .input-group {
@@ -12,9 +49,26 @@ body {
     flex-wrap: wrap;
 }
 
+#image-input{
+
+    padding: 8px 15px;
+    background-color: #B148A1;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+
+}
+
+#image-input:hover{
+
+    background-color: #743a6b;
+
+}
+
 button {
     padding: 8px 15px;
-    background-color: #4CAF50;
+    background-color: #B148A1;
     color: white;
     border: none;
     border-radius: 4px;
@@ -22,7 +76,7 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #743a6b;
 }
 
 #color-picker {
@@ -37,10 +91,12 @@ button:hover {
     justify-content: space-around;
     flex-wrap: wrap;
     margin: 20px 0;
+    color: #a06a98;
 }
 
 canvas {
-    border: 1px solid #ddd;
+    border-bottom: 3px solid #743a6b;
+    background: linear-gradient(to bottom, rgb(223, 199, 219, 0), rgb(223, 199, 219, 0.6));
     max-width: 100%;
     margin: 10px 0;
 }
@@ -48,8 +104,8 @@ canvas {
 .controls {
     margin: 15px 0;
     padding: 15px;
-    background-color: #f5f5f5;
-    border-radius: 5px;
+    background-color: #dfc7db;
+    border-radius: 10px;
 }
 
 label {
@@ -58,9 +114,22 @@ label {
 }
 
 #download-button {
-    background-color: #2196F3;
+    background-color: #b67ead;
 }
 
 #download-button:hover {
-    background-color: #0b7dda;
+    background-color: #a06395;
+}
+
+#color-piker {
+    /*betinha resolva :)*/
+    border-radius: 1000px;
+    background-color:#dfc7db ;
+
+}
+
+#pixel-density {
+    /*betinha resolva :)*/
+    background-color: #e7a8dd;
+
 }
