--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,16 @@ body {
     margin: 0 auto;
     padding: 20px;
     background-color: #332531;
+ 
     
+}
+
+img{
+
+    width: 150px;
+    height: 150px;
+    padding: 0;
+
 }
 
 .titulo{
@@ -19,16 +28,14 @@ body {
     padding: 15px;
     border-radius: 10px;
     text-align: center;
-    font-size: 25px
+    font-size: 25px;
+    top: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 
 };
 
-.chat-container{
 
-    position: absolute;
-    bottom: 0;
-
-};
 
 #chat-container {
     border: 1px solid #ccc;
@@ -38,6 +45,7 @@ body {
     padding: 10px;
     margin-bottom: 10px;
     background-color: #864D7E;
+  
 }
 
 .user-message {
@@ -81,5 +89,33 @@ body {
 button{
 
     font-family: space mono;
+
+}
+
+.buttons{
+
+    display: flex;
+    flex-direction: row;
+    padding-top: 10px;
+    gap: 50px;
+    justify-content: center;
+    
+}
+
+#pg1, #pg2{
+
+    width: 20%;
+    padding: 8px;
+    background-color: #854D7D;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+
+}
+
+#pg1:hover, #pg2:hover{
+
+    background-color: #583453;
 
 }
