--- a/styles/style3.css
+++ b/styles/style3.css
@@ -1,9 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: Space mono;
     max-width: 800px;
+    height: 100vh;
     margin: 0 auto;
     padding: 20px;
-    line-height: 1.6;
+    background-color: #332531;
+}
+
+.titulo{
+
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    padding-top: 25px;
+    padding-bottom: 25px;
+
+}
+
+img{
+
+    width: 150px;
+    height: 150px;
+    padding: 0;
+
+}
+
+h1{
+
+    align-items: center;
+    color: #a06a98;
+    justify-content: center;
+    display: flex;
+}
+
+p{
+
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    color: #c7b4c4;
+    padding-bottom: 20px;
+
 }
 
 .input-group {
@@ -11,11 +50,14 @@ body {
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
+    background-color: #a06a98;
+    border-radius: 5px;
 }
 
 button {
-    padding: 10px 15px;
-    background-color: #4CAF50;
+    padding: 5px 10px;
+    margin: 10px 20px;
+    background-color: #B148A1;
     color: white;
     border: none;
     border-radius: 4px;
@@ -23,8 +65,24 @@ button {
     font-size: 16px;
 }
 
+#image-input{
+
+    padding-top: 15px;
+    padding-left: 10px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+
+}
+
+#analyse-button{
+
+    color: #dfc7db;
+
+}
+
 button:hover {
-    background-color: #45a049;
+    background-color: #723068;
 }
 
 #color-picker {
@@ -37,23 +95,42 @@ button:hover {
 
 .image-container {
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    flex-direction: row;
     margin: 20px 0;
     gap: 20px;
 }
 
+h3{
+
+    color: #a06a98;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 20px 0;
+
+}
+
 canvas {
-    border: 1px solid #ddd;
+   
+    border-bottom: 3px solid #743a6b;
+    background: linear-gradient(to bottom, rgb(223, 199, 219, 0), rgb(223, 199, 219, 0.6));
     max-width: 100%;
     margin: 10px 0;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
+.image-container{
+
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 20px 0;
+    color: #a06a98;
 }
 
 .controls {
     margin: 15px 0;
     padding: 15px;
-    background-color: #f5f5f5;
+    background-color: #dfc7db;
     border-radius: 5px;
 }
 
@@ -64,14 +141,17 @@ label {
 }
 
 #analysis-result {
+    
     margin-top: 15px;
     padding: 10px;
-    background-color: #e8f5e9;
+    background-color: #dfc7db;
     border-radius: 4px;
     font-size: 16px;
 }
 
 #sensitivity {
+    /*betinha*/
     width: 100%;
     margin: 10px 0;
+    color: #7b028b;
 }
